log
Tue 18 Apr 2023 11:25:17 PM UTC: 
 tests:  1|8
total_score: 0/70
16282b1
Tue 18 Apr 2023 11:32:12 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|8
total_score: 0/70
f613b68
Tue 18 Apr 2023 11:34:11 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
c22c1a2
Tue 18 Apr 2023 11:48:32 PM UTC: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:92:1: error: expected identifier or ‘(’ before ‘}’ token
   92 | }
      | ^
Compilation failed
6cc7470
Tue 18 Apr 2023 11:48:47 PM UTC: 
 treemap.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  0|0
343d23f
Wed 19 Apr 2023 12:11:02 AM UTC: 
 treemap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  4|7
total_score: 5/70
9bfa3fd
Thu 20 Apr 2023 04:22:33 PM UTC: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:80:54: error: expected ‘;’ before ‘if’
   80 |     resultado = is_equal(tree , aux->pair->key , key)
      |                                                      ^
      |                                                      ;
   81 |     if(resultado == 1){
      |     ~~                                                
treemap.c:76:7: error: variable ‘resultado’ set but not used [-Werror=unused-but-set-variable]
   76 |   int resultado;
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
606cb95
Thu 20 Apr 2023 04:26:22 PM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
f72bd07
Thu 20 Apr 2023 04:27:37 PM UTC: 
 treemap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
1ea80a2
Thu 20 Apr 2023 04:29:05 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:14: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘void *’ [-Werror=format=]
   79 |     printf("%d\n", aux->pair->key);
      |             ~^     ~~~~~~~~~~~~~~
      |              |              |
      |              int            void *
      |             %p
cc1: all warnings being treated as errors
Compilation failed
cb74aca
Thu 20 Apr 2023 04:29:12 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
90cc3e3
Thu 20 Apr 2023 04:29:44 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
d348eb1
Thu 20 Apr 2023 04:29:53 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
fca007c
Thu 20 Apr 2023 04:30:37 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
8870777
Thu 20 Apr 2023 04:33:03 PM UTC: 
 treemap.c | 14 +++-----------
 1 file changed, 3 insertions(+), 11 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:1: error: control reaches end of non-void function [-Werror=return-type]
   87 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
295c3a8
Thu 20 Apr 2023 04:33:14 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:88:1: error: control reaches end of non-void function [-Werror=return-type]
   88 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9246a69
Thu 20 Apr 2023 04:36:46 PM UTC: 
 treemap.c | 19 ++++++++++++-------
 1 file changed, 12 insertions(+), 7 deletions(-)
 tests:  0|0
2eece9e
Thu 20 Apr 2023 04:37:14 PM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
0332f97
Thu 20 Apr 2023 04:40:34 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
31c256d
Thu 20 Apr 2023 04:40:47 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|7
total_score: 5/70
8a4bc0d
Thu 20 Apr 2023 04:41:33 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
59d9b16
Thu 20 Apr 2023 04:42:07 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
4fb7d80
Thu 20 Apr 2023 04:43:01 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
a8fc56c
Thu 20 Apr 2023 04:43:17 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
7865feb
Thu 20 Apr 2023 04:44:40 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
a1dd1e6
Thu 20 Apr 2023 04:45:06 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
2d87d0b
Thu 20 Apr 2023 04:46:23 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
c00b6fb
Thu 20 Apr 2023 04:46:34 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
a226b4c
Thu 20 Apr 2023 04:53:48 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:9: error: implicit declaration of function ‘lower_than_string’ [-Werror=implicit-function-declaration]
   87 |     if((lower_than_string(aux->pair->key , key)) == 1){
      |         ^~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8c22344
Thu 20 Apr 2023 04:54:12 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  4|7
total_score: 5/70
0da7d76
Thu 20 Apr 2023 04:54:33 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
885cff7
Thu 20 Apr 2023 04:58:06 PM UTC: 
 treemap.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:89:9: error: implicit declaration of function ‘lower_than_string’ [-Werror=implicit-function-declaration]
   89 |     if((lower_than_string(aux->pair->key , key)) == 1){
      |         ^~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2bfb819
Thu 20 Apr 2023 05:06:48 PM UTC: 
 treemap.c | 34 +++++++++++++++-------------------
 1 file changed, 15 insertions(+), 19 deletions(-)
 tests:  11|6
total_score: 15/70
f87b382
Thu 20 Apr 2023 05:07:05 PM UTC: 
 treemap.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  11|6
total_score: 15/70
3fdad9d
Thu 20 Apr 2023 05:17:42 PM UTC: 
 treemap.c | 30 +++++++++++++++++++++++++++++-
 1 file changed, 29 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
7019ba7
Thu 20 Apr 2023 05:20:01 PM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
aa8b396
Thu 20 Apr 2023 05:21:45 PM UTC: 
 treemap.c | 18 ++++++++----------
 1 file changed, 8 insertions(+), 10 deletions(-)
 tests:  0|0
a04e434
Thu 20 Apr 2023 05:30:30 PM UTC: 
 treemap.c | 32 +++++++++++---------------------
 1 file changed, 11 insertions(+), 21 deletions(-)
 tests:  11|6
total_score: 15/70
8425778
Thu 20 Apr 2023 05:32:24 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|6
total_score: 15/70
1a8ac85
Thu 20 Apr 2023 05:32:37 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|6
total_score: 15/70
0adfefe
Thu 20 Apr 2023 05:33:47 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
0de0b76
Thu 20 Apr 2023 05:34:35 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|6
total_score: 15/70
f7d4792
Thu 20 Apr 2023 05:37:28 PM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
71acfea
Thu 20 Apr 2023 05:37:42 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
b16f37c
Thu 20 Apr 2023 05:48:46 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
6516161
Thu 20 Apr 2023 05:51:50 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
6023914
Thu 20 Apr 2023 05:53:14 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
5428f4b
